// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic QuillViewHTMLComponent should render and set default snow theme class 1`] = `
<quill-view-html
  config={[Function Object]}
  content=""
  innerHTML=""
  sanitizer={[Function DomSanitizerImpl]}
  themeClass={[Function String]}
>
  <div
    class="ql-container ql-snow"
  >
    <div
      class="ql-editor"
    />
  </div>
</quill-view-html>
`;

exports[`QuillViewHTMLComponent - content should be set html 1`] = `
<ng-component
  content={[Function String]}
  view={[Function QuillViewHTMLComponent]}
>
  <quill-view-html
    theme="snow"
  >
    <div
      class="ql-container ql-snow ngx-quill-view-html"
    >
      <div
        class="ql-editor"
      >
        <p>
          Hallo
        </p>
      </div>
    </div>
  </quill-view-html>
</ng-component>
`;

exports[`QuillViewHTMLComponent - content should update html 1`] = `
<ng-component
  content={[Function String]}
  view={[Function QuillViewHTMLComponent]}
>
  <quill-view-html
    theme="snow"
  >
    <div
      class="ql-container ql-snow ngx-quill-view-html"
    >
      <div
        class="ql-editor"
      >
        <p>
          test
        </p>
      </div>
    </div>
  </quill-view-html>
</ng-component>
`;
